make navbar opacity less on scrolldown + fix background bug on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,8 +7,8 @@ html, body {
 /*gradient*/
 body {
     background: linear-gradient(-50deg, rgb(181, 206, 214), rgb(205, 235, 205), #FFEF78, #98DDCA, #D5ECC2, #FFD3B4, #FFAAA7, #c69bdd, rgb(24, 24, 24));
-    background-size: 450% 450%;
-    animation: moving 18s ease-in-out infinite;
+    background-size: 480% 480%;
+    animation: moving 16s ease-in-out infinite;
 }
 
 /*bakground gradient animation - moves 450%x450% background around 100%x100% space*/
